2002-08-01  H.J. Lu  <hjl@gnu.org>
	    Daniel Jacobowitz  <drow@mvista.com>

	* dwarf2dbg.c (dwarf2_finish): Don't emit unreferenced
	.debug_line section unless it has line information.

2002-07-31  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-07-30  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
	* tc-mips.c (load_address): Don't clobber $at when loading a
	64-bit address in non-PIC code if noat is in effect.
	(macro): Likewise.

	2002-07-30  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
	* config/tc-mips.c (macro): Use codes 6 and 7 in trap instructions
	used in division/multiply macro expansions similarly to how they
	are used in the variants with break instructions.
	(macro2): Likewise.

2002-07-26  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_set_cpu): Use PPC_OPCODE_64 as the default
	rather than PPC_OPCODE_32 for powerpc64*.

2002-07-25  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.
	* po/fr.po: Updated French translation.

2002-07-24  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.
	* po/es.po: Updated Spanish translation.

2002-07-23  Daniel Jacobowitz  <drow@mvista.com>

	* po/gas.pot: Regenerated.

2002-07-23  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2002-07-16  Moritz Jodeit  <moritz@jodeit.org>

	* config/tc-z8k.c (build_bytes): Correct order of memset args.

2002-07-16  Nick Clifton  <nickc@cambridge.redhat.com>

	* NEWS: Add 'Changes in 2.13'.

2002-07-15  Matt Fredette  <fredette@netbsd.org>

	* config/tc-hppa.h (LABELS_WITHOUT_COLONS): Define if TE_NetBSD.

2002-07-12  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.c (process_suffix): Merge CODE_64BIT JumpByte
	case with non CODE_64BIT case.  Don't warn on "qword ptr" if
	not CODE_64BIT.

2002-07-11  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_elf_frob_symbol): Delete.
	(ppc_frob_file_before_adjust): New function.