@@ -1,3 +1,10 @@
+2002-08-01  Daniel Jacobowitz  <drow@mvista.com>
+
+	Merge from mainline:
+	2002-08-01  Richard Sandiford  <rsandifo@redhat.com>
+	* gas/mips/elf-rel6.[sd]: New test.
+	* gas/mips/mips.exp: Run it.
+
 2002-07-30  Daniel Jacobowitz  <drow@mvista.com>
 
 	Merge from mainline:
