@@ -1,3 +1,10 @@
+2002-08-01  Daniel Jacobowitz  <drow@mvista.com>
+
+	Merge from mainline:
+	2002-08-01  Richard Sandiford  <rsandifo@redhat.com>
+	* config/tc-mips.c (tc_gen_reloc): Extend GP-relative addend
+	handling to BFD_RELOC_MIPS16_GPREL.
+
 2002-08-01  H.J. Lu  <hjl@gnu.org>
 	    Daniel Jacobowitz  <drow@mvista.com>
 
